kubernetes/base/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pintask
  labels:
    managed-by: kustomize
  annotations:
    description: Generated with kustomize
