kubernetes/base/namespace/namespace.network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-network-deny-all
  namespace: pintask
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
